--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -14,13 +14,18 @@ services:
     env_file:
       - ./.env.prod
     depends_on:
-      - db
-  db:
-    image: postgres:13
+      - postgres
+  postgres:
+    build: services/postgres
     volumes:
-      - postgres_data_prod:/var/lib/postgresql/data/
-    env_file:
-      - ./.env.prod.db
+      - ./:/tmp/db
+      - postgres_prod:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=pass
+      - PGUSER=postgres
+    ports:
+      - 1363:5432
   nginx:
     build: ./services/nginx
     volumes:
@@ -35,3 +40,4 @@ volumes:
   postgres_data_prod:
   static_volume:
   media_volume:
+  postgres_prod:
