--- a/services/web/requirements.txt
+++ b/services/web/requirements.txt
@@ -1,4 +1,8 @@
-Flask==2.3.2
+Flask==2.2.0
+Werkzeug==2.2.0
 Flask-SQLAlchemy==3.0.3
+psycopg2-binary==2.9.6
 gunicorn==20.1.0
 psycopg2-binary==2.9.6
+bleach==2.1.2
+sqlalchemy==1.4.31
