--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -1,10 +1,10 @@
 upstream hello_flask {
-    server web:1362;
+    server web:1363;
 }
 
 server {
 
-    listen 80 ssl;
+    listen 80;
 
     location / {
         proxy_pass http://hello_flask;
