--- a/.github/workflows/tests-docker-compose.yml
+++ b/.github/workflows/tests-docker-compose.yml
@@ -20,3 +20,8 @@ jobs:
           git submodule update
           docker-compose up -d --build
           docker ps -a
+          sleep 20
+          pip install psycopg2
+          pip install faker
+          pip install sqlalchemy
+          sh ./load_data.sh 100
