--- a/.github/workflows/tests-docker-compose.yml
+++ b/.github/workflows/tests-docker-compose.yml
@@ -21,6 +21,7 @@ jobs:
           docker-compose up -d --build
           docker ps -a
           sleep 20
+          pip install dotenv
           pip install psycopg2
           pip install faker
           pip install sqlalchemy
