--- a/.github/workflows/tests-docker-compose.yml
+++ b/.github/workflows/tests-docker-compose.yml
@@ -23,4 +23,4 @@ jobs:
           sleep 20
           pip install faker
           pip install sqlalchemy
-          sh ./load_data.sh 100
+          sh ./load_data.sh --db "postgresql://postgres:pass@localhost:1362" --user_rows 10
