--- a/.env.dev
+++ b/.env.dev
@@ -1,7 +1,7 @@
-FLASK_APP=project/__init__.py
+FLASK_APP=web/project/project.py
 FLASK_DEBUG=1
-FLASK_RUN_PORT=1363
-DATABASE_URL=postgresql://postgres:pass@localhost:1362
+#FLASK_RUN_PORT=1362
+DATABASE_URL=postgresql://postgres:pass@localhost:1362/devdb
 SQL_HOST=postgres
 SQL_PORT=5432
 DATABASE=postgres
