--- a/.env.dev
+++ b/.env.dev
@@ -1,7 +1,8 @@
-FLASK_APP=web/project/project.py
+FLASK_APP=web/project/manage.py
 FLASK_DEBUG=1
 FLASK_RUN_PORT=1363
-DATABASE_URL=postgresql://postgres:pass@postgres:5432/devdb
+#DATABASE_URL=postgresql://postgres:pass@postgres:5432/devdb
+DATABASE_URL=postgresql://postgres:pass@postgres:5432
 SQL_HOST=postgres
 SQL_PORT=5432
 DATABASE=postgres
